# detective-quest-crisbypass

./: CMakeLists.txt  algoritmos_avancados_aventureiro.c  algoritmos_avancados_mestre.c  algoritmos_avancados_novato.c
